FreshRSS/manifest.yaml
apiVersion: v1
kind: Service
metadata:
  name: freshrss
  namespace: freshrss
spec:
  selector:
    app: freshrss
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: freshrss-deployment
  namespace: freshrss
  labels:
    app: freshrss
spec:
  replicas: 1
  selector:
    matchLabels:
      app: freshrss
  template:
    metadata:
      labels:
        app: freshrss
    spec:
      containers:
      - name: freshrss
        image: ghcr.io/freshrss/freshrss:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 128Mi
            cpu: 100m
          limits:
            memory: 512Mi
            cpu: 500m
        livenessProbe:
          exec:
            command:
              - php
              - cli/health.php
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 6
        readinessProbe:
          exec:
            command:
              - php
              - cli/health.php
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 1
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: freshrss
spec:
  selector:
    app.kubernetes.io/name: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: freshrss
spec:
  replicas: 1
  serviceName: "postgres"
  selector:
    matchLabels:
      app.kubernetes.io/name: postgres
  template:
    metadata:
      labels:
        app.kubernetes.io/name: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:15-alpine
        ports:
          - containerPort: 5432
        volumeMounts:
          - name: data
            mountPath: "/var/lib/postgresql/data"
  volumeClaimTemplates:
  - metadata: 
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "ebs-gp3-retain"
      resources:
        requests:
          storage: 5Gi
